--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     implementation 'com.github.dimitrisCBR:GradientTextView:1.2'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.github.medyo:fancybuttons:1.9.1'
+    implementation 'net.sourceforge.jtds:jtds:1.3.1'
+
 
 }
